--- a/README.Rmd
+++ b/README.Rmd
@@ -32,11 +32,13 @@ getS3method("<S3_GENERIC>", "<CLASS>")
 
 The definitive reference is this classic R News article:
 
-Accessing the Sources  
-Uwe Ligges  
-<https://cran.r-project.org/doc/Rnews/Rnews_2006-4.pdf>  
-Volume 6/4, October 2006.  
-Go to page 43.
+> Accessing the Sources
+>
+> Uwe Ligges  
+>
+> <https://cran.r-project.org/doc/Rnews/Rnews_2006-4.pdf>  
+>
+> Volume 6/4, October 2006. Go to page 43.
 
 Another good reference is the help file for `method()`:
 
@@ -124,8 +126,12 @@ You need to locate the source code of R or the associated add-on package on the 
 
 #### Download source of R itself:
 
-  * Download source for current release from <https://cran.r-project.org>, e.g. `R-3.2.2.tar.gz`, and unpack it.  
-            tar xvf R-3.2.2.tar.gz
+  * Download source for current release from <https://cran.r-project.org>, e.g. `R-3.2.2.tar.gz`, and unpack it.
+
+    ```
+    tar xvf R-3.2.2.tar.gz
+    ```
+
   * See more info there about getting the development version.
   * Or checkout from the official Subversion repository <https://svn.r-project.org/R/>.
 
@@ -141,13 +147,13 @@ Example: I want the source for `levels<-`.
 `levels<-`    # .Primitive()
 ```
 
-Search for `levels<-` in `$R HOME/src/main/names.c` and we find [this line](`$R HOME/src/main/names.c`):
+Search for `levels<-` in [`$R HOME/src/main/names.c`](https://github.com/wch/r-source/blob/trunk/src/main/names.c) and we find [this line](https://github.com/wch/r-source/blob/3d8fc77d602f19c9722d8e13c1a1f5f69f42a5c4/src/main/names.c#L218):
 
 ``` c
 {"levels<-", do_levelsgets, 0, 1, 2, {PP_FUNCALL, PREC_LEFT, 1}}
 ```
 
-which tells we're looking for `do_levelsgets`. Now use your search capability (GitHub? `grep`?) to look for that within the files below `$R_HOME/src/`. I choose the [GitHub option](https://github.com/wch/r-source/search?utf8=✓&q=+do_levelsgets+path%3Asrc%2Fmain&type=Code) and use this query:
+which tells us we're looking for `do_levelsgets`. Now use your search capability (GitHub? `grep`?) to look for that within the files below `$R_HOME/src/`. I choose the [GitHub option](https://github.com/wch/r-source/search?utf8=✓&q=+do_levelsgets+path%3Asrc%2Fmain&type=Code) and use this query:
 
 ``` bash
  do_levelsgets path:src/main
@@ -164,17 +170,24 @@ And finally arrive at my destination: [lines 1242 through 1261 in `$R_HOME/src/m
 
 #### Download source of an add-on package:
 
-  * Visit the package on CRAN, e.g., <https://cran.r-project.org/web/packages/vegan/index.html>, download the `*.tar.gz` linked from "Package source", and unpack it.  
-            tar xvf vegan_2.3-1.tar.gz 
-  * If developed on GitHub, e.g., <https://github.com/vegandevs/vegan>, download via the "Download ZIP" button or Git clone it.  
-           git clone https://github.com/vegandevs/vegan.git
+  * Visit the package on CRAN, e.g., <https://cran.r-project.org/web/packages/vegan/index.html>, download the `*.tar.gz` linked from "Package source", and unpack it.
+
+    ```
+    tar xvf vegan_2.3-1.tar.gz
+    ```
+    
+  * If developed on GitHub, e.g., <https://github.com/vegandevs/vegan>, download via the "Download ZIP" button or Git clone it.
+
+    ```
+    git clone https://github.com/vegandevs/vegan.git
+    ```
 
 #### How to find what you need in R package source:
 
   * Look in the `src` directory. If you are lucky, there will be a file that obviously contains the function of interest.
   * Otherwise, search with `grep`, your editor/IDE, or [GitHub queries](https://help.github.com/articles/searching-github/) and follow the trail to rainbow's end.
 
-Example: I want the source for `dplyr::bind_rows`.
+Example: I want the source for `dplyr::bind_rows`. `dplyr` is developed [on GitHub](https://github.com/hadley/dplyr).
 
 First I search within the `R` directory with [this GitHub search query](https://github.com/hadley/dplyr/search?utf8=✓&q=bind_rows+path%3AR):
 
@@ -182,7 +195,7 @@ First I search within the `R` directory with [this GitHub search query](https://
 bind_rows path:R
 ```
 
-GitHub search only shows you the first one or two matches within a file, but I gather that `R/bind.r` is where I want to look. I [visit it in the browser](https://github.com/hadley/dplyr/blob/master/R/bind.r) and use my browser to search for `bind_rows`, which reveals the [function definition](https://github.com/hadley/dplyr/blob/master/R/bind.r). That reveals I actually need `bind_rows_`.
+GitHub search only shows you the first one or two matches within a file, but I gather that [`R/bind.r`](https://github.com/hadley/dplyr/blob/master/R/bind.r) is where I want to look. I visit it in the browser and use the browser to search for `bind_rows`, which reveals the [function definition](https://github.com/hadley/dplyr/blob/969a3a8e2f1dea5802a1cb6c13e189691a0e206f/R/bind.r#L70-L81). That reveals I actually need `bind_rows_`.
 
 So I do another [GitHub search with this query](https://github.com/hadley/dplyr/search?utf8=✓&q=bind_rows_):
 
@@ -193,6 +206,7 @@ bind_rows_
 which reveals hits in
 
 ```
+R/bind.r
 R/RcppExports.R
 src/bind.cpp
 src/RcppExports.cpp
@@ -213,4 +227,4 @@ https://github.com/hadley/dplyr/blob/2a3d526a85f484f75218807e0e5feed2d65e2c13/sr
 An incomplete list:
 
   * S4
-  * [R-Forge](https://r-forge.r-project.org)
+  * Other places to put code, e.g. [R-Forge](https://r-forge.r-project.org) or BitBucket
